fixed issue with mashups not showing green tick

--- a/MGOImageGridv3/MGOImageGridv3.css
+++ b/MGOImageGridv3/MGOImageGridv3.css
@@ -223,7 +223,7 @@ span.mgoQlikIcons {
 
 .qv-object-MGOImageGridv3 span.mgoSelectiontick{
 	position:relative; z-index: 100; left:0px; top:0px;
-	display:inline-block; padding: 0px 0px 0px 0px; margin: 0px 0px 0px -30px; height:30px; width:30px; background-position: 50% 50%; background-repeat: no-repeat; background-image: url(../Extensions/MGOImageGridv3/greentick.png); background-size:50%; 
+	display:inline-block; padding: 0px 0px 0px 0px; margin: 0px 0px 0px -30px; height:30px; width:30px; background-position: 50% 50%; background-repeat: no-repeat; background-image: url(../Extensions/MGOImageGridv3/greentick.png),url(../MGOImageGridv3/greentick.png); background-size:50%; 
 	}
 
 
